
Bug Handling
------------

* Updated Sarama dependency from pre-1.0 release fork to fork (with only test
  code changes) of Sarama 1.5.0 release.

Features
--------

* Added decoder support to StatAccumInput.

* Added `git_clone_to_path` to the cmake build to allow git repos to be cloned
  into alternate locations; useful for relocating forks of Go packages into
  their original import paths.

0.10.1 (2016-??-??)
===================


0.10.0 (2015-12-30)
===================

Bug Handling
------------

* Fixed issue where LogstreamerInput doesn't notice when a zero-length file is
  deleted and replaced by a new zero-length file before any data is appended
  (#1199).

0.10.0b2 (2015-11-20)
=====================

Backwards Incompatibilities
---------------------------

* StatAccumInput Input: percent_threshold param type convert to slice

Bug Handling
------------

* Updated Sarama dependency from pre-1.0 release fork to fork (with only test
  code changes) of Sarama 1.5.0 release.

Features
--------

* Added decoder support to StatAccumInput.

* Added `git_clone_to_path` to the cmake build to allow git repos to be cloned
  into alternate locations; useful for relocating forks of Go packages into
  their original import paths.

0.10.0 (2015-??-??)
=====================

Backwards Incompatibilities
---------------------------

* `DecoderRunner` interface changed `SetSendFailure` to `SetFailureHandling`.

Features
--------

* Allow TcpOutput to re-establish the connection after a configurable number
  of successfully delivered messages.

* Added `set_hostname` option to UdpInput configuration (#1668).

* Added `linux_netdev` and `linux_netstat` decoders (#1712).

* Improved error output for ElasticSearchOutput HTTP failures.

* Added `log_decode_failures` config value to decoders.

* Adder `log_flags` to hekad config, to control the prefix for STDOUT and
  STDERR logs.

Bug Handling
------------
